
2022-11-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Preliminary implemenation of support for the
				COB_FILENAME_SPACES option default TRUE.
				A check for environment variable is done to disable.
				If the name in ASSIGN variable has invalid data status 9/004
				If the name in ASSIGN variable starts with double quote then
				trailing spaces are included in file name 

2022-10-31  Ron Norman <rjn@inglenet.com>

	* common.c: Only redo 'raise (sig)' if a core dupm is wanted
	* common.h: Add cob_symbol type of SYM_ADRS_VARY

2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* statement.def: added STMT_PRESENT_WHEN

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved header files that are not installed from EXTRA_DIST
	  to _SOURCES (per automake manual)
	* fileio.c (sequential_read): andle variable-sized record-sequential
	  files when the size was read, but no data found for that afterwards
	* mlio.c (xml_parse): fix bad assignment leading to compiler warnings
	* common.c (cob_check_beyond_exit), common.h: new function for implicit
	  exit/goback checks

2022-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_debug_open, cob_trace_print), intrinsic.c
	 (cob_intr_hex_to_char): prefer extending switch over use of topupper
	* call.c, common.c, intrinisic.c, screenio.c: directly call toupper/tolower
	  without previous check of islower/isupper
	* system.def, common.c (cob_sys_runtime_error_proc):
	  implement CBL_RUNTIME_ERROR

2022-10-15  Simon Sobisch <simonsobisch@gnu.org>

	* version.h, Makefile.am: new file, moving out version
	  definitions from common.h
	* common.h: drop COB_WITHOUT_EXCEPTIONS, which was added only for
	  resource compilers, which should now include libversion.h
	* common.c (cob_runtime_warning_external, cob_runtime_warning):
	  fix mixing of stdio/direct writes without flush

2022-10-14  Simon Sobisch <simonsobisch@gnu.org>

	* statement.def, Makefile.am: new file containing definitions of